# strelitzia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh
build_config/: build_config_default.rb  build_config_mingw-i686.rb  build_config_mingw-x86_64.rb
doc/: Gemfile  Makefile  layout_default.erb  render.rb
doc/articles/: engine.md  main.md
example/hello/scenes/: boot.rb
script/lib/: artifact.rb  battle_scene.rb  character.rb  dialogue_box.rb  dramatis_personae.rb  museum.rb  story_scene.rb
script/scenes/: boot.rb  scene01.rb  scene02.rb  scene03.rb  scene04.rb
src/: CMakeLists.txt  game.c  game.h  main.c  scene.rb  scriptlib.c  scriptlib.h  version.h
